tests/codegen/fail/aliased_direct_task_handle_tuple_repackage_use_after_move_build.ql
struct Wrap {
    values: [Int; 0],
}

async fn worker() -> Wrap {
    return Wrap { values: [] }
}

async fn helper() -> Wrap {
    let task = worker()
    let alias = task
    let first = await task
    let pair = (alias, worker())
    return await pair[0]
}
